# Xema

./: .gitignore  .gitmodules  NOTICE  OpenCam3D.sln  README.md  build.sh
calibration/: calibrate_function.cpp  calibrate_function.h  calibrate_machine.cpp  calibration.cpp  calibration.vcxproj  calibration.vcxproj.filters
cmd/: cmd.cpp  cmd.vcxproj  cmd.vcxproj.filters
cpp/: CMakeLists.txt  cpp.vcxproj  cpp.vcxproj.filters  xcamera.h  xema_camera.cpp  xema_camera.h
cpp_example/: CMakeLists.txt  camera_status.h  cpp_example.cpp  cpp_example.vcxproj  cpp_example.vcxproj.filters  xcamera.h  xemacpp.lib  xemacppd.lib
docs/: BOM.csv  DFX800系列相机接口文档.docx  XEMA系列相机接口文档.docx  相机搭建与使用常见问题（FAQ）.docx
example/: CMakeLists.txt  example.cpp  example.vcxproj  open_cam3d_sdk.h
firmware/: CMakeLists.txt  camera.cpp  camera.h  camera_basler.cpp  camera_basler.h  camera_galaxy.cpp  camera_galaxy.h  camera_server_new.cpp  df_status.h  encode.cu  encode.cuh  encode_cuda.cu  encode_cuda.cuh  filter_module.cu  filter_module.cuh  i2c.cpp  i2c.h  lightcrafter3010.cpp  lightcrafter3010.h  lightcrafter_test.cpp  management.cu  management.cuh  memory_management.cu  memory_management.cuh  merge_hdr.cu  merge_hdr.cuh  merge_repetition.cu  merge_repetition.cuh  minsw.cu  minsw.cuh  power_controller.cpp  power_controller.h  protocol.h  reconstruct.cu  reconstruct.cuh  scan3d.cpp  scan3d.h  socket_tcp.cpp  system_config_settings.cpp  system_config_settings.h
sdk/: CMakeLists.txt  DF8.cpp  DF8.h  camera_status.h  open_cam3d.cpp  open_cam3d.h  sdk.vcxproj  sdk.vcxproj.filters  socket_tcp.cpp
(+90 files in other folders)
